# SGGW_Python

./: README.md  test.db
my_app/: README.md  alembic.ini  misssing_values.csv  pyproject.toml  test.db  text.txt  values.csv
my_app/alembic/: env.py
my_app/alembic/versions/: 21e2fd22a94f_relacja_1_do_wielu.py  4e992413ea4a_initaial_migration.py  a4c31a5f3fca_migracja_pierwsza.py  e04aaf28ec9f_relacja_wiele_do_wielu.py
my_app/src/my_app/: Context_Managers.py  main.py  sql.py  test.db
