[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Glazaczow",email = "jacobglaz@poczta.fm"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "my_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
